fix text align

--- a/index.css
+++ b/index.css
@@ -283,14 +283,15 @@ video {
     height: 800px;
     padding: auto;
     color: rgb(106, 78, 144);
-    padding: auto;
 }
 
 .section-name {
     margin-top: auto;
     height: 100px;
-    text-align: center;
-    overflow-x: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    overflow-y: hidden;
 }
 
 h2 {
@@ -298,6 +299,7 @@ h2 {
     font-size: 60px;
     font-weight: 600;
     margin-top: auto;
+    padding-bottom: 5%;
 }
 
 .desc {
@@ -339,7 +341,8 @@ p {
 
 .carousel-category {
     height: 100%;
-    align-self: baseline;
+    display: flex;
+    align-items: baseline;
 }
 
 .carousel-inner,
@@ -875,7 +878,6 @@ footer img:hover {
     }
     .carousel-category {
         height: 100%;
-        align-self: center;
     }
     .gallery-text {
         font-size: 50px;
@@ -977,9 +979,17 @@ footer img:hover {
         margin-left: 0;
     }
     .section-size:nth-child(odd) h3 {
-        text-align: end;
+        text-align: left;
     }
     .section-size:nth-child(odd) p {
+        text-align: left;
+        margin-left: 0;
+        margin-right: auto;
+    }
+    .section-size:nth-child(even) h3 {
+        text-align: end;
+    }
+    .section-size:nth-child(even) p {
         text-align: end;
         margin-left: auto;
         margin-right: 0;
